--- a/hello.appzui/package.json
+++ b/hello.appzui/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "application-name",
-  "version": "0.0.1",
+  "name": "Hello.AppZui",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "nodejs ./bin/www"
   },
   "dependencies": {
     "express": "~4.0.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
-    "body-parser": "~1.0.0",
-    "debug": "~0.7.4",
-    "jade": "~1.3.0"
+    "socketio": "1.3.4",
+    "jade": "1.9.2",
+    "mongojs": "mongojs"
   }
 }
